    * The OpenID Connect Federation 1.0 SubsetOfOperation.apply method must
      return null instead of an empty List<String>.
    * Updates MetadataPolicyEntry.apply to process "one_of", "subset_of" and
      "superset_of" for voluntary parameters according to OpenID Connect
      Federation 1.0 draft 29.

version 10.10.1 (2023-06-29)
    * MetadataPolicyEntry.apply must throw a PolicyViolationException when an
      essential parameter fails a subset_of check.

version 10.11 (2023-07-08)
    * Adds EntityStatementClaimsSet.getRPInformation and setRPInformation
      methods (iss #428).
    * Moves setMetadata to parent CommonFederationClaimsSet class.
    * Moves setRPMetadata to parent CommonFederationClaimsSet class.
    * Moves setOPMetadata to parent CommonFederationClaimsSet class.
    * Moves setOAuthClientMetadata to parent CommonFederationClaimsSet class.
    * Moves setOAuthClientMetadata to parent CommonFederationClaimsSet class.
    * Moves setASMetadata to parent CommonFederationClaimsSet class.
    * Moves setFederationEntityMetadata to parent CommonFederationClaimsSet
      class.

version 10.12 (2023-07-31)
    * Adds OAuth 2.0 Rich Authorization Requests (RAR) (RFC 9396) support.
    * AuthorizationRequest receives authorization_details (RAR) support.
    * AuthenticationRequest receives authorization_details (RAR) support.
    * TokenRequest receives authorization_details (RAR) support.
    * The Bearer and DPoP AccessToken classes receive authorization_details
      (RAR) support.
    * The AccessTokenResponse receives authorization_details (RAR) support.
    * The TokenIntrospectionSuccessResponse receives authorization_details
      (RAR) support.
    * AuthorizationServerMetadata and OIDCProviderMetadata receive
      authorization_details_types_supported (RAR) support.
    * Adds OAuth2Error.INVALID_AUTHORIZATION_DETAILS constant for RAR.
    * Identifier.toStringList(Collection) must omit null items (iss #430).