@@ -79,6 +79,7 @@ public class ClientInformationTest extends TestCase {
 		assertTrue(paramNames.contains("authorization_encrypted_response_enc"));
 		assertTrue(paramNames.contains("authorization_encrypted_response_enc"));
 		assertTrue(paramNames.contains("require_pushed_authorization_requests"));
+		assertTrue(paramNames.contains("authorization_details_types"));
 		assertTrue(paramNames.contains("backchannel_token_delivery_mode"));
 		assertTrue(paramNames.contains("backchannel_client_notification_endpoint"));
 		assertTrue(paramNames.contains("backchannel_authentication_request_signing_alg"));
@@ -87,7 +88,7 @@ public class ClientInformationTest extends TestCase {
 		assertTrue(paramNames.contains("signed_jwks_uri"));
 		assertTrue(paramNames.contains("client_registration_types"));
 
-		assertEquals(44, paramNames.size());
+		assertEquals(45, paramNames.size());
 	}
 	
 	
